[gd_scene load_steps=44 format=3 uid="uid://dvbombdw5e4qj"]

[ext_resource type="PackedScene" uid="uid://bosv1atxbmdi8" path="res://components/hitbox_component.tscn" id="1_bbwi4"]
[ext_resource type="Script" path="res://player/player_controller.gd" id="1_ocgo8"]
[ext_resource type="Texture2D" uid="uid://bmspt3ci24us6" path="res://sprites/Snoblin_Free_Skeleton/Assets/Skeleton/Skeleton.png" id="2_4p5ik"]
[ext_resource type="Texture2D" uid="uid://c3n8nf856agy3" path="res://sprites/Snoblin_Free_Skeleton/Assets/Extra/Shadow.png" id="2_gquwe"]
[ext_resource type="PackedScene" uid="uid://bvsfyjk7gw2qm" path="res://components/health_component.tscn" id="2_oikq2"]
[ext_resource type="Resource" uid="uid://blq5jinm6cysl" path="res://inventory/player_inventory.tres" id="2_uxjey"]
[ext_resource type="Script" path="res://scripts/unattached_scripts/attack.gd" id="3_xuk57"]
[ext_resource type="Shader" path="res://shaders/blink.gdshader" id="4_h5id8"]
[ext_resource type="Script" path="res://scripts/inventory_ui.gd" id="7_1a054"]
[ext_resource type="Texture2D" uid="uid://jyj1kt3bjod3" path="res://sprites/DowsingPanelUI.png" id="8_8ri4f"]
[ext_resource type="Texture2D" uid="uid://dggs8esshpfl1" path="res://sprites/DowsingRod.png" id="9_bj382"]
[ext_resource type="Texture2D" uid="uid://rcpsa5mfg6h4" path="res://sprites/InventoryUI.png" id="10_xlhe4"]
[ext_resource type="Script" path="res://scripts/HotbarUI.gd" id="11_fvhoe"]
[ext_resource type="Texture2D" uid="uid://duq884lid68jm" path="res://sprites/HotbarUI.png" id="11_qtu4x"]
[ext_resource type="PackedScene" uid="uid://ddh58vrskxidi" path="res://scenes/inventory_ui_slot.tscn" id="11_u86xk"]
[ext_resource type="Texture2D" uid="uid://bkr7ptdhglfjg" path="res://sprites/InventorySlot.png" id="12_tt0ms"]
[ext_resource type="Texture2D" uid="uid://67f152cmuu5y" path="res://sprites/InventorySlotSelected.png" id="13_8k7xo"]
[ext_resource type="PackedScene" uid="uid://cmsmwlpiua276" path="res://scenes/health_container.tscn" id="18_chv3h"]
[ext_resource type="Script" path="res://scripts/HealthBarUI.gd" id="18_gref2"]
[ext_resource type="Texture2D" uid="uid://c3in4v725tdv" path="res://sprites/Retro Inventory/Heart_Blue_1.png" id="19_loqwo"]
[ext_resource type="Texture2D" uid="uid://ct35xck8q36f5" path="res://sprites/Retro Inventory/Heart_Blue_3.png" id="20_2jekp"]
[ext_resource type="Script" path="res://player/DowsingRodBackground.gd" id="20_5ujum"]
[ext_resource type="Script" path="res://player/DropScript.gd" id="23_6eovy"]
[ext_resource type="Texture2D" uid="uid://hgemvb0v2mee" path="res://sprites/Down_arrow.png" id="23_cdyv6"]

[sub_resource type="Resource" id="Resource_jy2tr"]
script = ExtResource("3_xuk57")
damage = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gs76e"]
shader = ExtResource("4_h5id8")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Animation" id="Animation_5s1n4"]
resource_name = "death_down"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fpays"]
resource_name = "death_left"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ah340"]
resource_name = "death_right"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6losq"]
resource_name = "death_up"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u543s"]
resource_name = "idle_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ltbpc"]
resource_name = "idle_left"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 7, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p1ywh"]
resource_name = "idle_right"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bwdbb"]
resource_name = "idle_up"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_65yqt"]
resource_name = "walk_down"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gmj4r"]
resource_name = "walk_left"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iwsft"]
resource_name = "walk_right"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7oxfb"]
resource_name = "walk_up"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jvli"]
_data = {
"death_down": SubResource("Animation_5s1n4"),
"death_left": SubResource("Animation_fpays"),
"death_right": SubResource("Animation_ah340"),
"death_up": SubResource("Animation_6losq"),
"idle_down": SubResource("Animation_u543s"),
"idle_left": SubResource("Animation_ltbpc"),
"idle_right": SubResource("Animation_p1ywh"),
"idle_up": SubResource("Animation_bwdbb"),
"walk_down": SubResource("Animation_65yqt"),
"walk_left": SubResource("Animation_gmj4r"),
"walk_right": SubResource("Animation_iwsft"),
"walk_up": SubResource("Animation_7oxfb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_777sa"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ylco1"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ppnhf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v8c84"]
radius = 6.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
process_mode = 3
collision_layer = 2
collision_mask = 129
slide_on_ceiling = false
script = ExtResource("1_ocgo8")
player_inventory = ExtResource("2_uxjey")
hit = SubResource("Resource_jy2tr")

[node name="Shadow" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gquwe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_gs76e")
position = Vector2(1.19209e-07, 0)
scale = Vector2(0.828125, 0.875)
texture = ExtResource("2_4p5ik")
hframes = 4
vframes = 12

[node name="ToolHolder" type="Node2D" parent="."]
position = Vector2(6, 2.08165e-12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3jvli")
}
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_777sa")

[node name="ResourceDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceDetector"]
shape = SubResource("CircleShape2D_ylco1")

[node name="ItemDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetector"]
shape = SubResource("CircleShape2D_ppnhf")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("1_bbwi4")]
visible = false
healthComponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_v8c84")

[node name="HealthComponent" parent="." instance=ExtResource("2_oikq2")]
MAX_HEALTH = 10

[node name="ToolFreezeTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DisableMoveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HotbarUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_fvhoe")
base_slot_text = ExtResource("12_tt0ms")
select_slot_text = ExtResource("13_8k7xo")

[node name="TextureRect" type="TextureRect" parent="UI/HotbarUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 246.0
offset_top = 551.0
offset_right = -250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_qtu4x")
stretch_mode = 4

[node name="GridContainer" type="GridContainer" parent="UI/HotbarUI/TextureRect"]
layout_mode = 0
offset_left = 98.0
offset_top = 1.0
offset_right = 407.0
offset_bottom = 41.0
scale = Vector2(1.2, 1.2)
theme_override_constants/h_separation = 103
columns = 4

[node name="InventoryUISlot" parent="UI/HotbarUI/TextureRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/HotbarUI/TextureRect/GridContainer/InventoryUISlot"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot2" parent="UI/HotbarUI/TextureRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/HotbarUI/TextureRect/GridContainer/InventoryUISlot2"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot3" parent="UI/HotbarUI/TextureRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/HotbarUI/TextureRect/GridContainer/InventoryUISlot3"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot4" parent="UI/HotbarUI/TextureRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/HotbarUI/TextureRect/GridContainer/InventoryUISlot4"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="HealthBarUI" type="Control" parent="UI" node_paths=PackedStringArray("health")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_gref2")
health = NodePath("../../HealthComponent")
heart_sprite = ExtResource("19_loqwo")
half_heart_sprite = ExtResource("20_2jekp")

[node name="GridContainer" type="GridContainer" parent="UI/HealthBarUI"]
layout_mode = 0
offset_left = 858.0
offset_top = 13.0
offset_right = 1129.0
offset_bottom = 70.0
theme_override_constants/h_separation = 50
columns = 5

[node name="HealthContainer" parent="UI/HealthBarUI/GridContainer" instance=ExtResource("18_chv3h")]
layout_mode = 2

[node name="HealthContainer2" parent="UI/HealthBarUI/GridContainer" instance=ExtResource("18_chv3h")]
layout_mode = 2

[node name="HealthContainer3" parent="UI/HealthBarUI/GridContainer" instance=ExtResource("18_chv3h")]
layout_mode = 2

[node name="HealthContainer4" parent="UI/HealthBarUI/GridContainer" instance=ExtResource("18_chv3h")]
layout_mode = 2

[node name="HealthContainer5" parent="UI/HealthBarUI/GridContainer" instance=ExtResource("18_chv3h")]
layout_mode = 2

[node name="InventoryUI" type="Control" parent="UI" node_paths=PackedStringArray("hotbar_UI")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_1a054")
hotbar_UI = NodePath("../HotbarUI")
inv_path = "res://inventory/player_inventory.tres"

[node name="DowsingRodBackground" type="TextureRect" parent="UI/InventoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 868.0
offset_top = 80.0
offset_right = -41.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.92)
texture = ExtResource("8_8ri4f")
stretch_mode = 5
script = ExtResource("20_5ujum")

[node name="TextureRect" type="TextureRect" parent="UI/InventoryUI/DowsingRodBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_bj382")
stretch_mode = 5

[node name="NinePatchRect" type="NinePatchRect" parent="UI/InventoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 370.0
offset_top = 15.0
offset_right = -360.0
offset_bottom = -385.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_xlhe4")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="GridContainer" type="GridContainer" parent="UI/InventoryUI/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -83.5
offset_right = 97.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 90
theme_override_constants/v_separation = 90
columns = 4

[node name="InventoryUISlot" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot2" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot2"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot3" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot3"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot4" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot4"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot5" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot5"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot6" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot6"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot7" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot7"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="InventoryUISlot8" parent="UI/InventoryUI/NinePatchRect/GridContainer" instance=ExtResource("11_u86xk")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/InventoryUI/NinePatchRect/GridContainer/InventoryUISlot8"]
texture = ExtResource("12_tt0ms")
centered = false

[node name="Panel" type="Panel" parent="UI/InventoryUI"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 285.0
offset_top = 152.0
offset_right = -793.0
offset_bottom = -422.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("23_6eovy")

[node name="TextureRect" type="TextureRect" parent="UI/InventoryUI/Panel"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_cdyv6")

[node name="Money" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 20.0
offset_right = 131.0
offset_bottom = 43.0
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0.85098, 0.666667, 0, 1)
text = "0"

[node name="AudioPlayers" type="Node2D" parent="."]

[node name="ItemShufflePlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ItemSellPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ItemBuyPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ItemDropPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ItemPickupPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ItemEquipPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="ItemUsePlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="PlayerHitPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="PlayerFootstepsPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]

[connection signal="timeout" from="ToolFreezeTimer" to="." method="_on_tool_freeze_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="DisableMoveTimer" to="." method="_on_disable_move_timer_timeout"]
